Closed Bug 204931 Opened 21 years ago Closed 21 years ago

trunk topcrash [@ nsHashtable::Remove]

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jcarpenter0524, Assigned: aaronlev)

Details

(Keywords: crash, topcrash, Whiteboard: landed1.4?)

Crash Data

Attachments

(1 file)

nsHashtable::Remove   5 
Crash data range: 2003-05-05 to 2003-05-07
Build ID range: 2003050108 to 2003050509

Stack Trace: 

	 nsHashtable::Remove	[c:/builds/seamonkey/mozilla/xpcom/ds/nsHashtable.cpp 
line 243]
	 nsDocAccessible::Destroy
[c:/builds/seamonkey/mozilla/accessible/src/base/nsDocAccessible.cpp  line 262]
	 nsWindow::~nsWindow
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp  line 824]
	 nsWindow::`scalar deleting destructor'
	 nsWindow::Release	[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp
 line 699]
	 nsCOMPtr_base::assign_with_AddRef
[c:/builds/seamonkey/mozilla/xpcom/glue/nsCOMPtr.cpp  line 75]
	 nsDocShell::GetContentViewer
[c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp  line 1236]
	 nsHTMLFrameInnerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/document/src/nsFrameFrame.cpp  line 756]
	 nsHTMLFrameInnerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/document/src/nsFrameFrame.cpp  line 756]
	 nsFrameList::DestroyFrames
[c:/builds/seamonkey/mozilla/layout/base/src/nsFrameList.cpp  line 131]
	 nsContainerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsContainerFrame.cpp  line 143]
	 nsFrameList::DestroyFrames
[c:/builds/seamonkey/mozilla/layout/base/src/nsFrameList.cpp  line 131]
	 nsContainerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsContainerFrame.cpp  line 143]
	 nsBoxFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsBoxFrame.cpp  line 1104]
	 nsFrameList::DestroyFrames
[c:/builds/seamonkey/mozilla/layout/base/src/nsFrameList.cpp  line 131]
	 nsContainerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsContainerFrame.cpp  line 143]
	 nsBoxFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsBoxFrame.cpp  line 1104]
	 nsFrameList::DestroyFrames
[c:/builds/seamonkey/mozilla/layout/base/src/nsFrameList.cpp  line 131]
	 nsContainerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsContainerFrame.cpp  line 143]
	 nsBoxFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsBoxFrame.cpp  line 1104]
	 nsFrameList::DestroyFrames
[c:/builds/seamonkey/mozilla/layout/base/src/nsFrameList.cpp  line 131]
	 nsContainerFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsContainerFrame.cpp  line 143]
	 ViewportFrame::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsViewportFrame.cpp  line 68]
	 FrameManager::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsFrameManager.cpp  line 517]
	 PresShell::Destroy
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp  line 1841]
	 DocumentViewerImpl::Destroy
[c:/builds/seamonkey/mozilla/content/base/src/nsDocumentViewer.cpp  line 1135]
	 nsDocShell::Destroy	[c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp
 line 3021]
	 nsWebShell::Destroy	[c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp
 line 1354]
	 nsXULWindow::Destroy
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsXULWindow.cpp  line 410]
	 nsWebShellWindow::Destroy
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsWebShellWindow.cpp  line 1660]
	 nsChromeTreeOwner::Destroy
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsChromeTreeOwner.cpp  line 292]
	 nsMsgComposeService::CloseWindow
[c:/builds/seamonkey/mozilla/mailnews/compose/src/nsMsgComposeService.cpp  line 329]
	 nsMsgComposeService::DeleteCachedWindows
[c:/builds/seamonkey/mozilla/mailnews/compose/src/nsMsgComposeService.cpp  line 237]
	 nsMsgComposeService::Observe
[c:/builds/seamonkey/mozilla/mailnews/compose/src/nsMsgComposeService.cpp  line 342]
	 nsObserverService::NotifyObservers
[c:/builds/seamonkey/mozilla/xpcom/ds/nsObserverService.cpp  line 212]
	 NS_ShutdownXPCOM	[c:/builds/seamonkey/mozilla/xpcom/build/nsXPComInit.cpp 
line 677]
	 GRE_Shutdown
[c:/builds/seamonkey/mozilla/xpcom/glue/standalone/nsXPCOMGlue.cpp  line 256]
	 main	[c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp  line 1662]
	 WinMain	[c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp  line 1672]
	 WinMainCRTStartup()
	 kernel32.dll + 0x214c7 (0x77e814c7)
 
 	Source File : c:/builds/seamonkey/mozilla/xpcom/ds/nsHashtable.cpp line : 243
     (19891257)	URL: www.tomshardware.com
     (19850027)	URL: www.tomshardware.com
     (19838755)	URL: www.intentcenter.com
     (19838755)	Comments: Shutting email down.
     (19813780)	URL: www.dell.com
start with accessiblity.
Assignee: dougt → aaronl
Component: XPCOM → Accessibility APIs
QA Contact: scc → dsirnapalli
Severity: normal → critical
Attached patch Null checkSplinter Review
Attachment #122987 - Flags: review?(jgaunt)
Attachment #122987 - Flags: review?(jgaunt) → review?(kyle.yuan)
Comment on attachment 122987 [details] [diff] [review]
Null check

It's good to me. But I'm still curious why the mRootAccessible was created but
gGlobalDocAccessibleCache didn't get initialized?
Attachment #122987 - Flags: review?(kyle.yuan) → review+
Kyle, I think gGlobalDocAccessibleCache was initialized, but then it may have
been somehow cleared early by ShutdownXPAccessibility. I don't know, and I can't
reproduce the crash.
Attachment #122987 - Flags: superreview?(alecf)
Comment on attachment 122987 [details] [diff] [review]
Null check

looks good but do we know when this condition occurs? should we NS_ASSERTION()
here? are there other places we should be checking this?

sr=alecf with the above questions answered (perhaps with a NS_ASSERTION as
well)
Comment on attachment 122987 [details] [diff] [review]
Null check

looks good but do we know when this condition occurs? should we NS_ASSERTION()
here? are there other places we should be checking this?

sr=alecf with the above questions answered (perhaps with a NS_ASSERTION as
well)
Attachment #122987 - Flags: superreview?(alecf) → superreview+
Comment on attachment 122987 [details] [diff] [review]
Null check

Thanks alecf, I'll add the assertion when I check in.
Attachment #122987 - Flags: approval1.4?
Comment on attachment 122987 [details] [diff] [review]
Null check

a=sspitzer

a style nit though, please make the #ifdef / #else and #endif start at column
0.
Attachment #122987 - Flags: approval1.4? → approval1.4+
Has this landed yet? I don't see anything in bonsai. 
Whiteboard: landed1.4?
I checked this in as part of another bug. Marking fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsHashtable::Remove]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: