Bug 204931. Fix topcrash in nsDocAccessible::Destroy(). r=kyle, sr=alecf, a=sspitzer